Added:
- Player can now open the doors while holding the mop, without dropping it!