@@ -22,9 +22,9 @@ namespace ActualMop
     public class ActualMop : Mod
     {
         public override string ID => "ActualMop"; //Your mod ID (unique)
-        public override string Name => "Actual Mop (RC 1)"; //You mod name
+        public override string Name => "Actual Mop (Beta)"; //You mod name
         public override string Author => "Athlon"; //Your Username
-        public override string Version => "0.4"; //Version
+        public override string Version => "0.3"; //Version
 
         // Set this to true if you will be load custom assets from Assets folder.
         // This will create subfolder in Assets folder for your mod.
