@@ -31,7 +31,6 @@ This program is distributed under GNU General Public License v3. Feel free to us
 ## Credits
 
 - [BrennFuchS](https://www.racedepartment.com/downloads/authors/brennfuchs-yt.257537/) - 3D model of the mop
-- People at MSC Modding Discord for a help with an anti-drop script
 
 ## Support
 
