@@ -1,2 +1,5 @@
-Added:
-- Player can now open the doors while holding the mop, without dropping it!
+Changes:
+- Player has to hold the mop in hand, in order for it to work (press Use to grab the mop)
+
+Bug Fixes:
+- Mop should now always load back where you left it
